parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Unused terminals:

    INT

Grammar

Rule 0     S' -> input
Rule 1     input -> <empty>
Rule 2     input -> command input
Rule 3     command -> COMMENT
Rule 4     SYMBOL -> XYZ
Rule 5     SYMBOL -> ID
Rule 6     TEXT -> SYMBOL
Rule 7     TEXT -> STRING
Rule 8     NUMBER -> DOUBLE
Rule 9     command -> POP
Rule 10    command -> PUSH
Rule 11    command -> SCREEN NUMBER NUMBER
Rule 12    command -> SCREEN
Rule 13    command -> SAVE TEXT TEXT
Rule 14    command -> DISPLAY
Rule 15    command -> SPHERE NUMBER NUMBER NUMBER NUMBER
Rule 16    command -> SPHERE SYMBOL NUMBER NUMBER NUMBER NUMBER
Rule 17    command -> SPHERE NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 18    command -> SPHERE SYMBOL NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 19    command -> TORUS NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 20    command -> TORUS NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 21    command -> TORUS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 22    command -> TORUS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 23    command -> BOX NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 24    command -> BOX NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 25    command -> BOX SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 26    command -> BOX SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 27    command -> CONE NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 28    command -> CONE NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 29    command -> CONE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 30    command -> CONE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 31    command -> CYLINDER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 32    command -> CYLINDER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 33    command -> CYLINDER SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 34    command -> CYLINDER SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 35    command -> LINE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 36    command -> LINE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 37    command -> LINE NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER
Rule 38    command -> LINE NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER SYMBOL
Rule 39    command -> LINE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 40    command -> LINE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 41    command -> LINE SYMBOL NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER
Rule 42    command -> LINE SYMBOL NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER SYMBOL
Rule 43    command -> MOVE NUMBER NUMBER NUMBER SYMBOL
Rule 44    command -> MOVE NUMBER NUMBER NUMBER
Rule 45    command -> SCALE NUMBER NUMBER NUMBER SYMBOL
Rule 46    command -> SCALE NUMBER NUMBER NUMBER
Rule 47    command -> ROTATE XYZ NUMBER SYMBOL
Rule 48    command -> ROTATE XYZ NUMBER
Rule 49    command -> FRAMES NUMBER
Rule 50    command -> BASENAME TEXT
Rule 51    command -> VARY SYMBOL NUMBER NUMBER NUMBER NUMBER
Rule 52    command -> SET SYMBOL NUMBER
Rule 53    command -> SET_KNOBS NUMBER
Rule 54    command -> AMBIENT NUMBER NUMBER NUMBER
Rule 55    command -> CONSTANTS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 56    command -> CONSTANTS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 57    command -> LIGHT SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 58    command -> SHADING SHADING_TYPE
Rule 59    command -> CAMERA NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 60    command -> GENERATE_RAYFILES
Rule 61    command -> MESH CO TEXT
Rule 62    command -> MESH SYMBOL CO TEXT
Rule 63    command -> MESH CO TEXT SYMBOL
Rule 64    command -> MESH SYMBOL CO TEXT SYMBOL
Rule 65    command -> SAVE_KNOBS SYMBOL
Rule 66    command -> SAVE_COORDS SYMBOL
Rule 67    command -> TWEEN NUMBER NUMBER SYMBOL SYMBOL
Rule 68    command -> FOCAL NUMBER
Rule 69    command -> WEB
Rule 70    command -> TEXTURE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER

Terminals, with rules where they appear

AMBIENT              : 54
BASENAME             : 50
BOX                  : 23 24 25 26
CAMERA               : 59
CO                   : 61 62 63 64
COMMENT              : 3
CONE                 : 27 28 29 30
CONSTANTS            : 55 56
CYLINDER             : 31 32 33 34
DISPLAY              : 14
DOUBLE               : 8
FOCAL                : 68
FRAMES               : 49
GENERATE_RAYFILES    : 60
ID                   : 5
INT                  : 
LIGHT                : 57
LINE                 : 35 36 37 38 39 40 41 42
MESH                 : 61 62 63 64
MOVE                 : 43 44
POP                  : 9
PUSH                 : 10
ROTATE               : 47 48
SAVE                 : 13
SAVE_COORDS          : 66
SAVE_KNOBS           : 65
SCALE                : 45 46
SCREEN               : 11 12
SET                  : 52
SET_KNOBS            : 53
SHADING              : 58
SHADING_TYPE         : 58
SPHERE               : 15 16 17 18
STRING               : 7
TEXTURE              : 70
TORUS                : 19 20 21 22
TWEEN                : 67
VARY                 : 51
WEB                  : 69
XYZ                  : 4 47 48
error                : 

Nonterminals, with rules where they appear

NUMBER               : 11 11 15 15 15 15 16 16 16 16 17 17 17 17 18 18 18 18 19 19 19 19 19 20 20 20 20 20 21 21 21 21 21 22 22 22 22 22 23 23 23 23 23 23 24 24 24 24 24 24 25 25 25 25 25 25 26 26 26 26 26 26 27 27 27 27 27 28 28 28 28 28 29 29 29 29 29 30 30 30 30 30 31 31 31 31 31 32 32 32 32 32 33 33 33 33 33 34 34 34 34 34 35 35 35 35 35 35 36 36 36 36 36 36 37 37 37 37 37 37 38 38 38 38 38 38 39 39 39 39 39 39 40 40 40 40 40 40 41 41 41 41 41 41 42 42 42 42 42 42 43 43 43 44 44 44 45 45 45 46 46 46 47 48 49 51 51 51 51 52 53 54 54 54 55 55 55 55 55 55 55 55 55 56 56 56 56 56 56 56 56 56 56 56 56 57 57 57 57 57 57 59 59 59 59 59 59 67 67 68 70 70 70 70 70 70 70 70 70 70 70 70
SYMBOL               : 6 16 17 18 18 20 21 22 22 24 25 26 26 28 29 30 30 32 33 34 34 36 37 38 38 39 40 40 41 41 42 42 42 43 45 47 51 52 55 56 57 62 63 64 64 65 66 67 67 70
TEXT                 : 13 13 50 61 62 63 64
command              : 2
input                : 2 0

Parsing method: LALR

state 0

    (0) S' -> . input
    (1) input -> .
    (2) input -> . command input
    (3) command -> . COMMENT
    (9) command -> . POP
    (10) command -> . PUSH
    (11) command -> . SCREEN NUMBER NUMBER
    (12) command -> . SCREEN
    (13) command -> . SAVE TEXT TEXT
    (14) command -> . DISPLAY
    (15) command -> . SPHERE NUMBER NUMBER NUMBER NUMBER
    (16) command -> . SPHERE SYMBOL NUMBER NUMBER NUMBER NUMBER
    (17) command -> . SPHERE NUMBER NUMBER NUMBER NUMBER SYMBOL
    (18) command -> . SPHERE SYMBOL NUMBER NUMBER NUMBER NUMBER SYMBOL
    (19) command -> . TORUS NUMBER NUMBER NUMBER NUMBER NUMBER
    (20) command -> . TORUS NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (21) command -> . TORUS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER
    (22) command -> . TORUS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (23) command -> . BOX NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (24) command -> . BOX NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (25) command -> . BOX SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (26) command -> . BOX SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (27) command -> . CONE NUMBER NUMBER NUMBER NUMBER NUMBER
    (28) command -> . CONE NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (29) command -> . CONE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER
    (30) command -> . CONE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (31) command -> . CYLINDER NUMBER NUMBER NUMBER NUMBER NUMBER
    (32) command -> . CYLINDER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (33) command -> . CYLINDER SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER
    (34) command -> . CYLINDER SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (35) command -> . LINE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (36) command -> . LINE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (37) command -> . LINE NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER
    (38) command -> . LINE NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER SYMBOL
    (39) command -> . LINE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (40) command -> . LINE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (41) command -> . LINE SYMBOL NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER
    (42) command -> . LINE SYMBOL NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER SYMBOL
    (43) command -> . MOVE NUMBER NUMBER NUMBER SYMBOL
    (44) command -> . MOVE NUMBER NUMBER NUMBER
    (45) command -> . SCALE NUMBER NUMBER NUMBER SYMBOL
    (46) command -> . SCALE NUMBER NUMBER NUMBER
    (47) command -> . ROTATE XYZ NUMBER SYMBOL
    (48) command -> . ROTATE XYZ NUMBER
    (49) command -> . FRAMES NUMBER
    (50) command -> . BASENAME TEXT
    (51) command -> . VARY SYMBOL NUMBER NUMBER NUMBER NUMBER
    (52) command -> . SET SYMBOL NUMBER
    (53) command -> . SET_KNOBS NUMBER
    (54) command -> . AMBIENT NUMBER NUMBER NUMBER
    (55) command -> . CONSTANTS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (56) command -> . CONSTANTS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (57) command -> . LIGHT SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (58) command -> . SHADING SHADING_TYPE
    (59) command -> . CAMERA NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (60) command -> . GENERATE_RAYFILES
    (61) command -> . MESH CO TEXT
    (62) command -> . MESH SYMBOL CO TEXT
    (63) command -> . MESH CO TEXT SYMBOL
    (64) command -> . MESH SYMBOL CO TEXT SYMBOL
    (65) command -> . SAVE_KNOBS SYMBOL
    (66) command -> . SAVE_COORDS SYMBOL
    (67) command -> . TWEEN NUMBER NUMBER SYMBOL SYMBOL
    (68) command -> . FOCAL NUMBER
    (69) command -> . WEB
    (70) command -> . TEXTURE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER

    $end            reduce using rule 1 (input -> .)
    COMMENT         shift and go to state 14
    POP             shift and go to state 16
    PUSH            shift and go to state 19
    SCREEN          shift and go to state 24
    SAVE            shift and go to state 34
    DISPLAY         shift and go to state 12
    SPHERE          shift and go to state 27
    TORUS           shift and go to state 21
    BOX             shift and go to state 1
    CONE            shift and go to state 9
    CYLINDER        shift and go to state 3
    LINE            shift and go to state 11
    MOVE            shift and go to state 5
    SCALE           shift and go to state 4
    ROTATE          shift and go to state 30
    FRAMES          shift and go to state 10
    BASENAME        shift and go to state 13
    VARY            shift and go to state 6
    SET             shift and go to state 15
    SET_KNOBS       shift and go to state 31
    AMBIENT         shift and go to state 33
    CONSTANTS       shift and go to state 35
    LIGHT           shift and go to state 18
    SHADING         shift and go to state 29
    CAMERA          shift and go to state 17
    GENERATE_RAYFILES shift and go to state 2
    MESH            shift and go to state 28
    SAVE_KNOBS      shift and go to state 25
    SAVE_COORDS     shift and go to state 8
    TWEEN           shift and go to state 26
    FOCAL           shift and go to state 22
    WEB             shift and go to state 23
    TEXTURE         shift and go to state 7

    input                          shift and go to state 20
    command                        shift and go to state 32

state 1

    (23) command -> BOX . NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (24) command -> BOX . NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (25) command -> BOX . SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (26) command -> BOX . SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (8) NUMBER -> . DOUBLE
    (4) SYMBOL -> . XYZ
    (5) SYMBOL -> . ID

    DOUBLE          shift and go to state 36
    XYZ             shift and go to state 40
    ID              shift and go to state 39

    SYMBOL                         shift and go to state 37
    NUMBER                         shift and go to state 38

state 2

    (60) command -> GENERATE_RAYFILES .

    COMMENT         reduce using rule 60 (command -> GENERATE_RAYFILES .)
    POP             reduce using rule 60 (command -> GENERATE_RAYFILES .)
    PUSH            reduce using rule 60 (command -> GENERATE_RAYFILES .)
    SCREEN          reduce using rule 60 (command -> GENERATE_RAYFILES .)
    SAVE            reduce using rule 60 (command -> GENERATE_RAYFILES .)
    DISPLAY         reduce using rule 60 (command -> GENERATE_RAYFILES .)
    SPHERE          reduce using rule 60 (command -> GENERATE_RAYFILES .)
    TORUS           reduce using rule 60 (command -> GENERATE_RAYFILES .)
    BOX             reduce using rule 60 (command -> GENERATE_RAYFILES .)
    CONE            reduce using rule 60 (command -> GENERATE_RAYFILES .)
    CYLINDER        reduce using rule 60 (command -> GENERATE_RAYFILES .)
    LINE            reduce using rule 60 (command -> GENERATE_RAYFILES .)
    MOVE            reduce using rule 60 (command -> GENERATE_RAYFILES .)
    SCALE           reduce using rule 60 (command -> GENERATE_RAYFILES .)
    ROTATE          reduce using rule 60 (command -> GENERATE_RAYFILES .)
    FRAMES          reduce using rule 60 (command -> GENERATE_RAYFILES .)
    BASENAME        reduce using rule 60 (command -> GENERATE_RAYFILES .)
    VARY            reduce using rule 60 (command -> GENERATE_RAYFILES .)
    SET             reduce using rule 60 (command -> GENERATE_RAYFILES .)
    SET_KNOBS       reduce using rule 60 (command -> GENERATE_RAYFILES .)
    AMBIENT         reduce using rule 60 (command -> GENERATE_RAYFILES .)
    CONSTANTS       reduce using rule 60 (command -> GENERATE_RAYFILES .)
    LIGHT           reduce using rule 60 (command -> GENERATE_RAYFILES .)
    SHADING         reduce using rule 60 (command -> GENERATE_RAYFILES .)
    CAMERA          reduce using rule 60 (command -> GENERATE_RAYFILES .)
    GENERATE_RAYFILES reduce using rule 60 (command -> GENERATE_RAYFILES .)
    MESH            reduce using rule 60 (command -> GENERATE_RAYFILES .)
    SAVE_KNOBS      reduce using rule 60 (command -> GENERATE_RAYFILES .)
    SAVE_COORDS     reduce using rule 60 (command -> GENERATE_RAYFILES .)
    TWEEN           reduce using rule 60 (command -> GENERATE_RAYFILES .)
    FOCAL           reduce using rule 60 (command -> GENERATE_RAYFILES .)
    WEB             reduce using rule 60 (command -> GENERATE_RAYFILES .)
    TEXTURE         reduce using rule 60 (command -> GENERATE_RAYFILES .)
    $end            reduce using rule 60 (command -> GENERATE_RAYFILES .)


state 3

    (31) command -> CYLINDER . NUMBER NUMBER NUMBER NUMBER NUMBER
    (32) command -> CYLINDER . NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (33) command -> CYLINDER . SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER
    (34) command -> CYLINDER . SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (8) NUMBER -> . DOUBLE
    (4) SYMBOL -> . XYZ
    (5) SYMBOL -> . ID

    DOUBLE          shift and go to state 36
    XYZ             shift and go to state 40
    ID              shift and go to state 39

    SYMBOL                         shift and go to state 42
    NUMBER                         shift and go to state 41

state 4

    (45) command -> SCALE . NUMBER NUMBER NUMBER SYMBOL
    (46) command -> SCALE . NUMBER NUMBER NUMBER
    (8) NUMBER -> . DOUBLE

    DOUBLE          shift and go to state 36

    NUMBER                         shift and go to state 43

state 5

    (43) command -> MOVE . NUMBER NUMBER NUMBER SYMBOL
    (44) command -> MOVE . NUMBER NUMBER NUMBER
    (8) NUMBER -> . DOUBLE

    DOUBLE          shift and go to state 36

    NUMBER                         shift and go to state 44

state 6

    (51) command -> VARY . SYMBOL NUMBER NUMBER NUMBER NUMBER
    (4) SYMBOL -> . XYZ
    (5) SYMBOL -> . ID

    XYZ             shift and go to state 40
    ID              shift and go to state 39

    SYMBOL                         shift and go to state 45

state 7

    (70) command -> TEXTURE . SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (4) SYMBOL -> . XYZ
    (5) SYMBOL -> . ID

    XYZ             shift and go to state 40
    ID              shift and go to state 39

    SYMBOL                         shift and go to state 46

state 8

    (66) command -> SAVE_COORDS . SYMBOL
    (4) SYMBOL -> . XYZ
    (5) SYMBOL -> . ID

    XYZ             shift and go to state 40
    ID              shift and go to state 39

    SYMBOL                         shift and go to state 47

state 9

    (27) command -> CONE . NUMBER NUMBER NUMBER NUMBER NUMBER
    (28) command -> CONE . NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (29) command -> CONE . SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER
    (30) command -> CONE . SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (8) NUMBER -> . DOUBLE
    (4) SYMBOL -> . XYZ
    (5) SYMBOL -> . ID

    DOUBLE          shift and go to state 36
    XYZ             shift and go to state 40
    ID              shift and go to state 39

    SYMBOL                         shift and go to state 48
    NUMBER                         shift and go to state 49

state 10

    (49) command -> FRAMES . NUMBER
    (8) NUMBER -> . DOUBLE

    DOUBLE          shift and go to state 36

    NUMBER                         shift and go to state 50

state 11

    (35) command -> LINE . NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (36) command -> LINE . NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (37) command -> LINE . NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER
    (38) command -> LINE . NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER SYMBOL
    (39) command -> LINE . SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (40) command -> LINE . SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (41) command -> LINE . SYMBOL NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER
    (42) command -> LINE . SYMBOL NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER SYMBOL
    (8) NUMBER -> . DOUBLE
    (4) SYMBOL -> . XYZ
    (5) SYMBOL -> . ID

    DOUBLE          shift and go to state 36
    XYZ             shift and go to state 40
    ID              shift and go to state 39

    SYMBOL                         shift and go to state 52
    NUMBER                         shift and go to state 51

state 12

    (14) command -> DISPLAY .

    COMMENT         reduce using rule 14 (command -> DISPLAY .)
    POP             reduce using rule 14 (command -> DISPLAY .)
    PUSH            reduce using rule 14 (command -> DISPLAY .)
    SCREEN          reduce using rule 14 (command -> DISPLAY .)
    SAVE            reduce using rule 14 (command -> DISPLAY .)
    DISPLAY         reduce using rule 14 (command -> DISPLAY .)
    SPHERE          reduce using rule 14 (command -> DISPLAY .)
    TORUS           reduce using rule 14 (command -> DISPLAY .)
    BOX             reduce using rule 14 (command -> DISPLAY .)
    CONE            reduce using rule 14 (command -> DISPLAY .)
    CYLINDER        reduce using rule 14 (command -> DISPLAY .)
    LINE            reduce using rule 14 (command -> DISPLAY .)
    MOVE            reduce using rule 14 (command -> DISPLAY .)
    SCALE           reduce using rule 14 (command -> DISPLAY .)
    ROTATE          reduce using rule 14 (command -> DISPLAY .)
    FRAMES          reduce using rule 14 (command -> DISPLAY .)
    BASENAME        reduce using rule 14 (command -> DISPLAY .)
    VARY            reduce using rule 14 (command -> DISPLAY .)
    SET             reduce using rule 14 (command -> DISPLAY .)
    SET_KNOBS       reduce using rule 14 (command -> DISPLAY .)
    AMBIENT         reduce using rule 14 (command -> DISPLAY .)
    CONSTANTS       reduce using rule 14 (command -> DISPLAY .)
    LIGHT           reduce using rule 14 (command -> DISPLAY .)
    SHADING         reduce using rule 14 (command -> DISPLAY .)
    CAMERA          reduce using rule 14 (command -> DISPLAY .)
    GENERATE_RAYFILES reduce using rule 14 (command -> DISPLAY .)
    MESH            reduce using rule 14 (command -> DISPLAY .)
    SAVE_KNOBS      reduce using rule 14 (command -> DISPLAY .)
    SAVE_COORDS     reduce using rule 14 (command -> DISPLAY .)
    TWEEN           reduce using rule 14 (command -> DISPLAY .)
    FOCAL           reduce using rule 14 (command -> DISPLAY .)
    WEB             reduce using rule 14 (command -> DISPLAY .)
    TEXTURE         reduce using rule 14 (command -> DISPLAY .)
    $end            reduce using rule 14 (command -> DISPLAY .)


state 13

    (50) command -> BASENAME . TEXT
    (6) TEXT -> . SYMBOL
    (7) TEXT -> . STRING
    (4) SYMBOL -> . XYZ
    (5) SYMBOL -> . ID

    STRING          shift and go to state 53
    XYZ             shift and go to state 40
    ID              shift and go to state 39

    TEXT                           shift and go to state 54
    SYMBOL                         shift and go to state 55

state 14

    (3) command -> COMMENT .

    COMMENT         reduce using rule 3 (command -> COMMENT .)
    POP             reduce using rule 3 (command -> COMMENT .)
    PUSH            reduce using rule 3 (command -> COMMENT .)
    SCREEN          reduce using rule 3 (command -> COMMENT .)
    SAVE            reduce using rule 3 (command -> COMMENT .)
    DISPLAY         reduce using rule 3 (command -> COMMENT .)
    SPHERE          reduce using rule 3 (command -> COMMENT .)
    TORUS           reduce using rule 3 (command -> COMMENT .)
    BOX             reduce using rule 3 (command -> COMMENT .)
    CONE            reduce using rule 3 (command -> COMMENT .)
    CYLINDER        reduce using rule 3 (command -> COMMENT .)
    LINE            reduce using rule 3 (command -> COMMENT .)
    MOVE            reduce using rule 3 (command -> COMMENT .)
    SCALE           reduce using rule 3 (command -> COMMENT .)
    ROTATE          reduce using rule 3 (command -> COMMENT .)
    FRAMES          reduce using rule 3 (command -> COMMENT .)
    BASENAME        reduce using rule 3 (command -> COMMENT .)
    VARY            reduce using rule 3 (command -> COMMENT .)
    SET             reduce using rule 3 (command -> COMMENT .)
    SET_KNOBS       reduce using rule 3 (command -> COMMENT .)
    AMBIENT         reduce using rule 3 (command -> COMMENT .)
    CONSTANTS       reduce using rule 3 (command -> COMMENT .)
    LIGHT           reduce using rule 3 (command -> COMMENT .)
    SHADING         reduce using rule 3 (command -> COMMENT .)
    CAMERA          reduce using rule 3 (command -> COMMENT .)
    GENERATE_RAYFILES reduce using rule 3 (command -> COMMENT .)
    MESH            reduce using rule 3 (command -> COMMENT .)
    SAVE_KNOBS      reduce using rule 3 (command -> COMMENT .)
    SAVE_COORDS     reduce using rule 3 (command -> COMMENT .)
    TWEEN           reduce using rule 3 (command -> COMMENT .)
    FOCAL           reduce using rule 3 (command -> COMMENT .)
    WEB             reduce using rule 3 (command -> COMMENT .)
    TEXTURE         reduce using rule 3 (command -> COMMENT .)
    $end            reduce using rule 3 (command -> COMMENT .)


state 15

    (52) command -> SET . SYMBOL NUMBER
    (4) SYMBOL -> . XYZ
    (5) SYMBOL -> . ID

    XYZ             shift and go to state 40
    ID              shift and go to state 39

    SYMBOL                         shift and go to state 56

state 16

    (9) command -> POP .

    COMMENT         reduce using rule 9 (command -> POP .)
    POP             reduce using rule 9 (command -> POP .)
    PUSH            reduce using rule 9 (command -> POP .)
    SCREEN          reduce using rule 9 (command -> POP .)
    SAVE            reduce using rule 9 (command -> POP .)
    DISPLAY         reduce using rule 9 (command -> POP .)
    SPHERE          reduce using rule 9 (command -> POP .)
    TORUS           reduce using rule 9 (command -> POP .)
    BOX             reduce using rule 9 (command -> POP .)
    CONE            reduce using rule 9 (command -> POP .)
    CYLINDER        reduce using rule 9 (command -> POP .)
    LINE            reduce using rule 9 (command -> POP .)
    MOVE            reduce using rule 9 (command -> POP .)
    SCALE           reduce using rule 9 (command -> POP .)
    ROTATE          reduce using rule 9 (command -> POP .)
    FRAMES          reduce using rule 9 (command -> POP .)
    BASENAME        reduce using rule 9 (command -> POP .)
    VARY            reduce using rule 9 (command -> POP .)
    SET             reduce using rule 9 (command -> POP .)
    SET_KNOBS       reduce using rule 9 (command -> POP .)
    AMBIENT         reduce using rule 9 (command -> POP .)
    CONSTANTS       reduce using rule 9 (command -> POP .)
    LIGHT           reduce using rule 9 (command -> POP .)
    SHADING         reduce using rule 9 (command -> POP .)
    CAMERA          reduce using rule 9 (command -> POP .)
    GENERATE_RAYFILES reduce using rule 9 (command -> POP .)
    MESH            reduce using rule 9 (command -> POP .)
    SAVE_KNOBS      reduce using rule 9 (command -> POP .)
    SAVE_COORDS     reduce using rule 9 (command -> POP .)
    TWEEN           reduce using rule 9 (command -> POP .)
    FOCAL           reduce using rule 9 (command -> POP .)
    WEB             reduce using rule 9 (command -> POP .)
    TEXTURE         reduce using rule 9 (command -> POP .)
    $end            reduce using rule 9 (command -> POP .)


state 17

    (59) command -> CAMERA . NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (8) NUMBER -> . DOUBLE

    DOUBLE          shift and go to state 36

    NUMBER                         shift and go to state 57

state 18

    (57) command -> LIGHT . SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (4) SYMBOL -> . XYZ
    (5) SYMBOL -> . ID

    XYZ             shift and go to state 40
    ID              shift and go to state 39

    SYMBOL                         shift and go to state 58

state 19

    (10) command -> PUSH .

    COMMENT         reduce using rule 10 (command -> PUSH .)
    POP             reduce using rule 10 (command -> PUSH .)
    PUSH            reduce using rule 10 (command -> PUSH .)
    SCREEN          reduce using rule 10 (command -> PUSH .)
    SAVE            reduce using rule 10 (command -> PUSH .)
    DISPLAY         reduce using rule 10 (command -> PUSH .)
    SPHERE          reduce using rule 10 (command -> PUSH .)
    TORUS           reduce using rule 10 (command -> PUSH .)
    BOX             reduce using rule 10 (command -> PUSH .)
    CONE            reduce using rule 10 (command -> PUSH .)
    CYLINDER        reduce using rule 10 (command -> PUSH .)
    LINE            reduce using rule 10 (command -> PUSH .)
    MOVE            reduce using rule 10 (command -> PUSH .)
    SCALE           reduce using rule 10 (command -> PUSH .)
    ROTATE          reduce using rule 10 (command -> PUSH .)
    FRAMES          reduce using rule 10 (command -> PUSH .)
    BASENAME        reduce using rule 10 (command -> PUSH .)
    VARY            reduce using rule 10 (command -> PUSH .)
    SET             reduce using rule 10 (command -> PUSH .)
    SET_KNOBS       reduce using rule 10 (command -> PUSH .)
    AMBIENT         reduce using rule 10 (command -> PUSH .)
    CONSTANTS       reduce using rule 10 (command -> PUSH .)
    LIGHT           reduce using rule 10 (command -> PUSH .)
    SHADING         reduce using rule 10 (command -> PUSH .)
    CAMERA          reduce using rule 10 (command -> PUSH .)
    GENERATE_RAYFILES reduce using rule 10 (command -> PUSH .)
    MESH            reduce using rule 10 (command -> PUSH .)
    SAVE_KNOBS      reduce using rule 10 (command -> PUSH .)
    SAVE_COORDS     reduce using rule 10 (command -> PUSH .)
    TWEEN           reduce using rule 10 (command -> PUSH .)
    FOCAL           reduce using rule 10 (command -> PUSH .)
    WEB             reduce using rule 10 (command -> PUSH .)
    TEXTURE         reduce using rule 10 (command -> PUSH .)
    $end            reduce using rule 10 (command -> PUSH .)


state 20

    (0) S' -> input .



state 21

    (19) command -> TORUS . NUMBER NUMBER NUMBER NUMBER NUMBER
    (20) command -> TORUS . NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (21) command -> TORUS . SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER
    (22) command -> TORUS . SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (8) NUMBER -> . DOUBLE
    (4) SYMBOL -> . XYZ
    (5) SYMBOL -> . ID

    DOUBLE          shift and go to state 36
    XYZ             shift and go to state 40
    ID              shift and go to state 39

    SYMBOL                         shift and go to state 60
    NUMBER                         shift and go to state 59

state 22

    (68) command -> FOCAL . NUMBER
    (8) NUMBER -> . DOUBLE

    DOUBLE          shift and go to state 36

    NUMBER                         shift and go to state 61

state 23

    (69) command -> WEB .
